--- a/style/style.css
+++ b/style/style.css
@@ -161,4 +161,67 @@
   height: 300px;
   background-color: rgba(216, 46, 46, 0.141);
 }
+/* vision section end */
 
+.section_444{
+  width: 1216px;
+  height: 256px;
+  margin: -200px 160px 32px 160px;
+  background-color: rgba(216, 188, 147, 0.727);
+  border-radius: 10px;
+  
+}
+.img_4444{
+  background-image: url('../assets/quote-bg.png');
+  width: 64px;
+  height: 64px;
+  padding: 24px 0px 0px 25px;
+  background-repeat: no-repeat;
+}
+ /* recent news section*/
+ .recent_news{
+  margin: 32px 160px 32px 160px;
+ }
+
+ .bangladesh_satellite{
+ 
+  background-color: rgba(14, 200, 138, 0.127);
+  width: 1216px;
+  height: 402px;
+  display: flex;
+  border-radius: 10px;
+  align-items: center;
+
+ }
+ .satelite_img{
+  border-radius: 20px;
+  margin: 48px 32px 48px 48px;
+  height: 290px;
+ }
+ .bangladesh_discription{
+  margin: 56px 38px 56px 0px;
+  height: 290px;
+ }
+ .bangladesh_discription h3{
+  margin: 0;
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 12px;
+ }
+ .al_jazeera{
+  margin: 12px 0 12px 0;
+ }
+.bangladesh_discription data{
+  margin-right: 20px;
+}
+.bangladesh_satellite_discription{
+  margin-bottom: 52px;
+}
+.bangladesh_satellite_2{
+  background-color: rgba(14, 200, 138, 0.127);
+  width: 1216px;
+  height: 402px;
+  display: flex;
+  border-radius: 10px;
+  align-items: center;
+}
