--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,11 @@
+.open-sans-normal {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 /* shaird style */
 .font_color {
   color: #727D73;
@@ -10,17 +18,21 @@
   border-radius: 10px;
   padding: 8px 11px;
 }
-.btn_styel:hover{
+
+.btn_styel:hover {
   background-color: darkmagenta;
   color: #ffff;
 }
-.bg{
+
+.bg {
   background-color: #006a5051;
 }
-.bg_1{
+
+.bg_1 {
   background-color: brown;
 }
-.bg_2{
+
+.bg_2 {
   background-color: chartreuse;
 }
 
@@ -29,6 +41,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .sign_in li {
   list-style: none;
   padding: 10px 25px;
@@ -51,7 +64,8 @@
   font-weight: 700;
   margin: 31px 0px 31px 160px;
 }
-.explore_bangladesh_btn:hover{
+
+.explore_bangladesh_btn:hover {
   background-color: crimson;
   color: #ffff;
 }
@@ -188,28 +202,32 @@
 
 /* vision section end */
 
-.section_444 {
+/* muhammad yunus section start*/
+.muhammad_yunus {
   width: 1216px;
-  height: 256px;
+  height: 200px;
   margin: -200px 160px 32px 160px;
   background-color: rgba(216, 188, 147, 0.727);
   border-radius: 10px;
-
+  padding: 10px 0px 0px 24px;
 }
 
-.img_4444 {
+.muhammad_yunus_discription {
   background-image: url('../assets/quote-bg.png');
-  width: 64px;
-  height: 64px;
-  padding: 24px 0px 0px 25px;
   background-repeat: no-repeat;
+
+
 }
+
+
+/* muhammad yunus section end*/
 
 /* recent news section start*/
 .recent_news {
   margin: 32px 160px 32px 160px;
 }
-.recent_news h3{
+
+.recent_news h3 {
   font-size: 40px;
   font-weight: bold;
 }
@@ -263,27 +281,32 @@
   align-items: center;
   margin-top: 24px;
 }
+
 /* recent news section end*/
 
 /* Donate section start */
-.donate_section{
+.donate_section {
   margin: 82px 160px 20px 160px;
   text-align: center;
 }
-.donate_section h3{
+
+.donate_section h3 {
   font-size: 40px;
   font-weight: bold;
 }
-.donate_section h3 p{
+
+.donate_section h3 p {
   font-size: 16px;
   margin-top: 0;
 }
-.donate_today{
+
+.donate_today {
   display: flex;
   gap: 50px;
   justify-content: center;
 }
-.donate_amiint{
+
+.donate_amiint {
   padding: 20px;
   border: 1px solid rgba(0, 0, 0, 0.534);
   border-radius: 30px;
@@ -291,61 +314,93 @@
   font-size: 40px;
   margin: 25px 0 25px 0;
 }
-.donate_amiint:hover{
+
+.donate_amiint:hover {
   background-color: rgb(239, 19, 56);
   color: #ffff;
 }
-.donate_section_input{
-  padding: 15px 378px 15px 378px ;
+
+.donate_section_input {
+  padding: 15px 378px 15px 378px;
   border-radius: 15px;
-  border:.5px solid rgba(0, 0, 0, 0.204);
+  border: .5px solid rgba(0, 0, 0, 0.204);
   margin-bottom: 25px;
 }
+
 /*--Donate section end--*/
 
 /* Subscribe section start */
-.subscribe{
+.subscribe {
   width: 1216px;
   height: 395px;
-  background-color: #006a5061;
+  background-color: #006a502d;
   margin: 80px 160px 80px 160px;
   border-radius: 15px;
-  
- 
+
+
 }
 
-.subscribe_discription{
+.subscribe_discription {
   width: 770px;
   height: 112px;
   text-align: center;
-  /* margin: 80px 275px 80px 265px; */
   padding: 80px 223px 80px 223px;
 
 }
 
-.subscribe h3{
+.subscribe h3 {
   font-size: 40px;
   font-weight: bold;
 }
+
+.subscribe_discription p {
+  font-size: 16px;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+
+.subscribe_email {
+  padding: 12px 180px 12px 180px;
+  border-radius: 10px 0 0 10px;
+  border: none;
+}
+
+.subscribe_subscribe {
+  padding: 12px 30px;
+  margin-left: -5px;
+  border-radius: 0 10px 10px 0;
+  border: none;
+  background-color: #006A50;
+  color: #ffff;
+}
+
+.subscribe_subscribe:hover {
+  background-color: rgb(218, 13, 13);
+  color: #ffff;
+}
+
 /* Subscribe section end */
 
 /* footer section start */
-.footer_section{
+.footer_section {
   text-align: center;
 }
-.footer_section h3{
-font-size: 40px;
-font-weight: bold;
-margin-top: 130px;
-}
-.footer_img{
- margin-top: 64px;
- margin-bottom: 50px;
- 
+
+.footer_section h3 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 130px;
 }
 
-.footer_img_pad{
-  padding:10px ;
+.footer_img {
+  margin-top: 64px;
+  margin-bottom: 50px;
 
 }
+
+.footer_img_pad {
+  padding: 10px;
+
+}
+
 /* footer section end */
